@@ -27,6 +27,9 @@ import com.tungsten.fclcore.util.io.IOUtils;
 
 import org.jetbrains.annotations.Nullable;
 
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.logging.Level;
 import java.util.stream.Collectors;
@@ -67,44 +70,213 @@ public enum ModTranslations {
         }
     }
 
+    @SuppressWarnings("StatementWithEmptyBody")
+    private static String cleanSubname(String subname) {
+        if (StringUtils.isBlank(subname))
+            return "";
+
+        StringBuilder builder = new StringBuilder(subname.length());
+        for (int i = 0; i < subname.length(); ) {
+            int ch = subname.codePointAt(i);
+            if ((ch >= 'A' && ch <= 'Z') || (ch >= 'a' && ch <= 'z') || (ch >= '0' && ch <= '9')
+                    || ".+\\".indexOf(ch) >= 0) {
+                builder.appendCodePoint(ch);
+            } else if (Character.isWhitespace(ch)
+                    || "':_-/&()[]{}|,!?~•".indexOf(ch) >= 0
+                    || ch >= 0x1F300 && ch <= 0x1FAFF) {
+                // Remove these unnecessary characters from subname
+            } else {
+                // The subname contains unsupported characters, so we do not use this subname to match the mod
+                return "";
+            }
+            i += Character.charCount(ch);
+        }
+        return builder.length() == subname.length() ? subname : builder.toString();
+    }
+
     private final String resourceName;
-    private List<Mod> mods;
-    private Map<String, Mod> modIdMap; // mod id -> mod
-    private Map<String, Mod> curseForgeMap; // curseforge id -> mod
-    private List<Pair<String, Mod>> keywords;
-    private int maxKeywordLength = -1;
+    private volatile List<Mod> mods;
+    private volatile Map<String, Mod> modIdMap; // mod id -> mod
+    private volatile Map<String, Mod> subnameMap;
+    private volatile Map<String, Mod> curseForgeMap; // curseforge id -> mod
+    private volatile List<Pair<String, Mod>> keywords;
+    private volatile int maxKeywordLength = -1;
 
     ModTranslations(String resourceName) {
         this.resourceName = resourceName;
     }
 
-    @Nullable
-    public Mod getModByCurseForgeId(String id) {
-        if (StringUtils.isBlank(id) || !loadCurseForgeMap()) return null;
+    public List<Mod> getMods() {
+        List<Mod> mods = this.mods;
+        if (mods != null)
+            return mods;
 
-        return curseForgeMap.get(id);
+        synchronized (this) {
+            mods = this.mods;
+            if (mods != null)
+                return mods;
+
+            if (StringUtils.isBlank(resourceName)) {
+                return this.mods = List.of();
+            }
+
+            //noinspection DataFlowIssue
+            try (BufferedReader reader = new BufferedReader(
+                    new InputStreamReader(
+                            ModTranslations.class.getResourceAsStream(resourceName), StandardCharsets.UTF_8))) {
+                return this.mods = reader.lines().filter(line -> !line.startsWith("#")).map(Mod::new).collect(Collectors.toList());
+            } catch (Exception e) {
+                LOG.warning("Failed to load " + resourceName + e);
+                return this.mods = List.of();
+            }
+        }
+    }
+
+    private Map<String, Mod> getModIdMap() {
+        Map<String, Mod> modIdMap = this.modIdMap;
+        if (modIdMap != null)
+            return modIdMap;
+        synchronized (this) {
+            modIdMap = this.modIdMap;
+            if (modIdMap != null)
+                return modIdMap;
+
+            List<Mod> mods = getMods();
+            modIdMap = new HashMap<>(mods.size());
+            for (Mod mod : mods) {
+                for (String id : mod.getModIds()) {
+                    if (StringUtils.isNotBlank(id) && !"examplemod".equals(id)) {
+                        modIdMap.put(id, mod);
+                    }
+                }
+            }
+
+            return this.modIdMap = modIdMap;
+        }
+    }
+
+    private Map<String, Mod> getSubnameMap() {
+        Map<String, Mod> subnameMap = this.subnameMap;
+        if (subnameMap != null)
+            return subnameMap;
+        synchronized (this) {
+            subnameMap = this.subnameMap;
+            if (subnameMap != null)
+                return subnameMap;
+
+            subnameMap = new HashMap<>();
+
+            List<Mod> mods = getMods();
+            for (Mod mod : mods) {
+                String subname = cleanSubname(mod.getSubname());
+                if (StringUtils.isNotBlank(subname)) {
+                    subnameMap.put(subname, mod);
+                }
+            }
+
+            return this.subnameMap = subnameMap;
+        }
+    }
+
+    private Map<String, Mod> getCurseForgeMap() {
+        Map<String, Mod> curseForgeMap = this.curseForgeMap;
+        if (curseForgeMap != null)
+            return curseForgeMap;
+
+        synchronized (this) {
+            curseForgeMap = this.curseForgeMap;
+            if (curseForgeMap != null)
+                return curseForgeMap;
+
+            List<Mod> mods = getMods();
+            curseForgeMap = new HashMap<>(mods.size());
+            for (Mod mod : mods) {
+                if (StringUtils.isNotBlank(mod.getCurseforge())) {
+                    curseForgeMap.put(mod.getCurseforge(), mod);
+                }
+            }
+
+            return this.curseForgeMap = curseForgeMap;
+        }
+    }
+
+    private List<Pair<String, Mod>> getKeywords() {
+        List<Pair<String, Mod>> keywords = this.keywords;
+        if (keywords != null)
+            return keywords;
+
+        synchronized (this) {
+            keywords = this.keywords;
+            if (keywords != null)
+                return keywords;
+
+            List<Mod> mods = getMods();
+
+            keywords = new ArrayList<>();
+            int maxKeywordLength = -1;
+            for (Mod mod : mods) {
+                if (StringUtils.isNotBlank(mod.getName())) {
+                    keywords.add(pair(mod.getName(), mod));
+                    maxKeywordLength = Math.max(maxKeywordLength, mod.getName().length());
+                }
+                if (StringUtils.isNotBlank(mod.getSubname())) {
+                    keywords.add(pair(mod.getSubname(), mod));
+                    maxKeywordLength = Math.max(maxKeywordLength, mod.getSubname().length());
+                }
+                if (StringUtils.isNotBlank(mod.getAbbr())) {
+                    keywords.add(pair(mod.getAbbr(), mod));
+                    maxKeywordLength = Math.max(maxKeywordLength, mod.getAbbr().length());
+                }
+            }
+
+            this.maxKeywordLength = maxKeywordLength;
+            return this.keywords = keywords;
+        }
+    }
+
+    private int getMaxKeywordLength() {
+        int maxKeywordLength = this.maxKeywordLength;
+        if (maxKeywordLength >= 0)
+            return maxKeywordLength;
+
+        // Ensure maxKeywordLength is initialized
+        getKeywords();
+        return this.maxKeywordLength;
     }
 
     @Nullable
-    public Mod getModById(String id) {
-        if (StringUtils.isBlank(id) || !loadModIdMap()) return null;
+    public Mod getModByCurseForgeId(String id) {
+        if (StringUtils.isBlank(id)) return null;
 
-        return modIdMap.get(id);
+        return getCurseForgeMap().get(id);
+    }
+
+    @Nullable
+    public Mod getMod(String id, String subname) {
+        subname = cleanSubname(subname);
+        if (StringUtils.isNotBlank(subname)) {
+            Mod mod = getSubnameMap().get(subname);
+            if (mod != null)
+                return mod;
+        }
+
+        if (StringUtils.isNotBlank(id))
+            return getModIdMap().get(id);
+
+        return null;
     }
 
     public abstract String getMcmodUrl(Mod mod);
 
     public List<Mod> searchMod(String query) {
-        if (!loadKeywords()) return Collections.emptyList();
-
-        StringBuilder newQuery = ((CharSequence) query).chars()
+        StringBuilder newQuery = query.chars()
                 .filter(ch -> !Character.isSpaceChar(ch))
                 .collect(StringBuilder::new, (sb, value) -> sb.append((char) value), StringBuilder::append);
         query = newQuery.toString();
 
-        StringUtils.LongestCommonSubsequence lcs = new StringUtils.LongestCommonSubsequence(query.length(), maxKeywordLength);
+        StringUtils.LongestCommonSubsequence lcs = new StringUtils.LongestCommonSubsequence(query.length(), getMaxKeywordLength());
         List<Pair<Integer, Mod>> modList = new ArrayList<>();
-        for (Pair<String, Mod> keyword : keywords) {
+        for (Pair<String, Mod> keyword : getKeywords()) {
             int value = lcs.calc(query, keyword.getKey());
             if (value >= Math.max(1, query.length() - 3)) {
                 modList.add(pair(value, keyword.getValue()));
@@ -114,88 +286,6 @@ public enum ModTranslations {
                 .sorted((a, b) -> -a.getKey().compareTo(b.getKey()))
                 .map(Pair::getValue)
                 .collect(Collectors.toList());
-    }
-
-    private boolean loadFromResource() {
-        if (mods != null) return true;
-        if (StringUtils.isBlank(resourceName)) {
-            mods = Collections.emptyList();
-            return true;
-        }
-        try {
-            String modData = IOUtils.readFullyAsString(ModTranslations.class.getResourceAsStream(resourceName));
-            mods = Arrays.stream(modData.split("\n")).filter(line -> !line.startsWith("#")).map(Mod::new).collect(Collectors.toList());
-            return true;
-        } catch (Exception e) {
-            LOG.log(Level.WARNING, "Failed to load " + resourceName, e);
-            return false;
-        }
-    }
-
-    private boolean loadCurseForgeMap() {
-        if (curseForgeMap != null) {
-            return true;
-        }
-
-        if (mods == null) {
-            if (!loadFromResource()) return false;
-        }
-
-        curseForgeMap = new HashMap<>();
-        for (Mod mod : mods) {
-            if (StringUtils.isNotBlank(mod.getCurseforge())) {
-                curseForgeMap.put(mod.getCurseforge(), mod);
-            }
-        }
-        return true;
-    }
-
-    private boolean loadModIdMap() {
-        if (modIdMap != null) {
-            return true;
-        }
-
-        if (mods == null) {
-            if (!loadFromResource()) return false;
-        }
-
-        modIdMap = new HashMap<>();
-        for (Mod mod : mods) {
-            for (String id : mod.getModIds()) {
-                if (StringUtils.isNotBlank(id) && !"examplemod".equals(id)) {
-                    modIdMap.put(id, mod);
-                }
-            }
-        }
-        return true;
-    }
-
-    private boolean loadKeywords() {
-        if (keywords != null) {
-            return true;
-        }
-
-        if (mods == null) {
-            if (!loadFromResource()) return false;
-        }
-
-        keywords = new ArrayList<>();
-        maxKeywordLength = -1;
-        for (Mod mod : mods) {
-            if (StringUtils.isNotBlank(mod.getName())) {
-                keywords.add(pair(mod.getName(), mod));
-                maxKeywordLength = Math.max(maxKeywordLength, mod.getName().length());
-            }
-            if (StringUtils.isNotBlank(mod.getSubname())) {
-                keywords.add(pair(mod.getSubname(), mod));
-                maxKeywordLength = Math.max(maxKeywordLength, mod.getSubname().length());
-            }
-            if (StringUtils.isNotBlank(mod.getAbbr())) {
-                keywords.add(pair(mod.getAbbr(), mod));
-                maxKeywordLength = Math.max(maxKeywordLength, mod.getAbbr().length());
-            }
-        }
-        return true;
     }
 
     public static final class Mod {
@@ -214,7 +304,7 @@ public enum ModTranslations {
 
             curseforge = items[0];
             mcmod = items[1];
-            modIds = Collections.unmodifiableList(Arrays.asList(items[2].split(",")));
+            modIds = List.of(items[2].split(","));
             name = items[3];
             subname = items[4];
             abbr = items[5];
