@@ -17,13 +17,12 @@
  */
 package com.tungsten.fclcore.game;
 
-import com.tungsten.fclauncher.FCLConfig;
+import com.mio.data.Renderer;
 
 import org.jetbrains.annotations.NotNull;
 
 import java.io.File;
 import java.io.Serializable;
-import java.net.Proxy;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -36,19 +35,18 @@ public class LaunchOptions implements Serializable {
     private String versionType;
     private String profileName;
     private final List<String> gameArguments = new ArrayList<>();
-    private final List<String> overrideJavaArguments = new ArrayList<>();
     private final List<String> javaArguments = new ArrayList<>();
-    private final List<String> javaAgents = new ArrayList<>(0);
     private Integer minMemory;
     private Integer maxMemory;
-    private Integer metaspace;
     private Integer width;
     private Integer height;
     private String serverIp;
     private boolean beGesture;
     private boolean vulkanDriverSystem;
     private boolean pojavBigCore;
-    private FCLConfig.Renderer renderer;
+    private Renderer renderer;
+    private String uuid;
+    private boolean debugLog;
 
     /**
      * The game directory
@@ -96,24 +94,11 @@ public class LaunchOptions implements Serializable {
     }
 
     /**
-     * The highest priority JVM arguments (overrides the version setting)
-     */
-    @NotNull
-    public List<String> getOverrideJavaArguments() {
-        return Collections.unmodifiableList(overrideJavaArguments);
-    }
-
-    /**
      * User custom additional java virtual machine command line arguments.
      */
     @NotNull
     public List<String> getJavaArguments() {
         return Collections.unmodifiableList(javaArguments);
-    }
-
-    @NotNull
-    public List<String> getJavaAgents() {
-        return Collections.unmodifiableList(javaAgents);
     }
 
     /**
@@ -128,15 +113,6 @@ public class LaunchOptions implements Serializable {
      */
     public Integer getMaxMemory() {
         return maxMemory;
-    }
-
-    /**
-     * The maximum metaspace memory that the JVM can allocate.
-     * For Java 7 -XX:PermSize and Java 8 -XX:MetaspaceSize
-     * Containing class instances.
-     */
-    public Integer getMetaspace() {
-        return metaspace;
     }
 
     /**
@@ -181,8 +157,16 @@ public class LaunchOptions implements Serializable {
     /**
      * Renderer
      */
-    public FCLConfig.Renderer getRenderer() {
+    public Renderer getRenderer() {
         return renderer;
+    }
+
+    public String getUuid() {
+        return uuid;
+    }
+
+    public boolean isDebugLog() {
+        return debugLog;
     }
 
     public static class Builder {
@@ -194,54 +178,10 @@ public class LaunchOptions implements Serializable {
         }
 
         /**
-         * The game directory
-         */
-        public File getGameDir() {
-            return options.gameDir;
-        }
-
-        /**
-         * The Java Environment that Minecraft runs on.
-         */
-        public JavaVersion getJava() {
-            return options.java;
-        }
-
-        /**
-         * Will shown in the left bottom corner of the main menu of Minecraft.
-         * null if use the id of launch version.
-         */
-        public String getVersionName() {
-            return options.versionName;
-        }
-
-        /**
-         * Will shown in the left bottom corner of the main menu of Minecraft.
-         * null if use Version.versionType.
-         */
-        public String getVersionType() {
-            return options.versionType;
-        }
-
-        /**
-         * Don't know what the hell this is.
-         */
-        public String getProfileName() {
-            return options.profileName;
-        }
-
-        /**
          * User custom additional minecraft command line arguments.
          */
         public List<String> getGameArguments() {
             return options.gameArguments;
-        }
-
-        /**
-         * The highest priority JVM arguments (overrides the version setting)
-         */
-        public List<String> getOverrideJavaArguments() {
-            return options.overrideJavaArguments;
         }
 
         /**
@@ -251,74 +191,6 @@ public class LaunchOptions implements Serializable {
             return options.javaArguments;
         }
 
-        public List<String> getJavaAgents() {
-            return options.javaAgents;
-        }
-
-        /**
-         * The minimum memory that the JVM can allocate.
-         */
-        public Integer getMinMemory() {
-            return options.minMemory;
-        }
-
-        /**
-         * The maximum memory that the JVM can allocate.
-         */
-        public Integer getMaxMemory() {
-            return options.maxMemory;
-        }
-
-        /**
-         * The maximum metaspace memory that the JVM can allocate.
-         * For Java 7 -XX:PermSize and Java 8 -XX:MetaspaceSize
-         * Containing class instances.
-         */
-        public Integer getMetaspace() {
-            return options.metaspace;
-        }
-
-        /**
-         * The initial game window width
-         */
-        public Integer getWidth() {
-            return options.width;
-        }
-
-        /**
-         * The initial game window height
-         */
-        public Integer getHeight() {
-            return options.height;
-        }
-
-        /**
-         * The server ip that will connect to when enter game main menu.
-         */
-        public String getServerIp() {
-            return options.serverIp;
-        }
-
-        /**
-         * BE Gesture
-         */
-        public boolean isBeGesture() {
-            return options.beGesture;
-        }
-
-        /**
-         * vulkanDriverSystem
-         */
-        public boolean isVKDriverSystem() {
-            return options.vulkanDriverSystem;
-        }
-
-        /**
-         * Renderer
-         */
-        public FCLConfig.Renderer getRenderer() {
-            return options.renderer;
-        }
 
         public Builder setGameDir(File gameDir) {
             options.gameDir = gameDir;
@@ -351,21 +223,9 @@ public class LaunchOptions implements Serializable {
             return this;
         }
 
-        public Builder setOverrideJavaArguments(List<String> overrideJavaArguments) {
-            options.overrideJavaArguments.clear();
-            options.overrideJavaArguments.addAll(overrideJavaArguments);
-            return this;
-        }
-
         public Builder setJavaArguments(List<String> javaArguments) {
             options.javaArguments.clear();
             options.javaArguments.addAll(javaArguments);
-            return this;
-        }
-
-        public Builder setJavaAgents(List<String> javaAgents) {
-            options.javaAgents.clear();
-            options.javaAgents.addAll(javaAgents);
             return this;
         }
 
@@ -376,11 +236,6 @@ public class LaunchOptions implements Serializable {
 
         public Builder setMaxMemory(Integer maxMemory) {
             options.maxMemory = maxMemory;
-            return this;
-        }
-
-        public Builder setMetaspace(Integer metaspace) {
-            options.metaspace = metaspace;
             return this;
         }
 
@@ -409,13 +264,23 @@ public class LaunchOptions implements Serializable {
             return this;
         }
 
-        public Builder setRenderer(FCLConfig.Renderer renderer) {
+        public Builder setRenderer(Renderer renderer) {
             options.renderer = renderer;
             return this;
         }
 
         public Builder setPojavBigCore(boolean pojavBigCore) {
             options.pojavBigCore = pojavBigCore;
+            return this;
+        }
+
+        public Builder setUUid(String uuid) {
+            options.uuid = uuid;
+            return this;
+        }
+
+        public Builder setDebugLog(boolean debugLog) {
+            options.debugLog = debugLog;
             return this;
         }
 
